--- a/galerie.html
+++ b/galerie.html
@@ -7,7 +7,7 @@
 
 <style type="text/css" media="all">
 <!--
-@import url("css/chatillon2.css");
+@import url("css/lac2.css");
 .style1 {
 	color: #C0985D;
 	font-weight: bold;
