--- a/faune et flore.html
+++ b/faune et flore.html
@@ -6,7 +6,7 @@
 <meta name="description" content="Site de présentation du Lac Daumesnil ">
 <style type="text/css" media="all">
 <!--
-@import url("css/chatillon.css");
+@import url("css/lac1.css");
 .style1 {
 	color: #C0985D;
 	font-weight: bold;
