--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 
 <style type="text/css" media="all">
 <!--
-@import url("css/chatillon.css");
+@import url("css/lac1.css");
 .style1 {
 	color: #C0985D;
 	font-weight: bold;
