--- a/activités et loisirs.html
+++ b/activités et loisirs.html
@@ -3,10 +3,10 @@
 <head>
 <meta charset="UTF-8">
 <title>Le Lac Daumesnil</title>
-<meta name="description" content="Site de présentation du Lac Daumesnil ">
+<meta name="description" content="Site de prÃ©sentation du Lac Daumesnil ">
 <style type="text/css" media="all">
 <!--
-@import url("css/chatillon.css");
+@import url("css/lac1.css");
 .style1 {
 	color: #C0985D;
 	font-weight: bold;
@@ -58,7 +58,7 @@ function MM_swapImage() { //v3.0
       <li><a href="index.html">Accueil</a></li>
       <li><a href="histoire.html">Histoire</a></li>
       <li><a href="galerie.html">Images</a></li>
-      <li><a href="activités et loisirs.html">Activités et Loisirs</a></li>
+      <li><a href="activitÃ©s et loisirs.html">ActivitÃ©s et Loisirs</a></li>
       <li><a href="faune et flore.html">Faune et Flore</a></li>
       <li><a href="contact.html">Contact</a></li>
 </ul>
@@ -69,23 +69,23 @@ function MM_swapImage() { //v3.0
   <h1 class="D4595B"> <br>
   </h1>
 <h1 align="center"><font color="#0000FF"></font></h1>
-<p align="justify" class="coul993300"><font size="5"> Le lac Daumesnil, situé dans le bois de Vincennes, offre une multitude d'activités pour les visiteurs de tous âges. </font></p>
+<p align="justify" class="coul993300"><font size="5"> Le lac Daumesnil, situÃ© dans le bois de Vincennes, offre une multitude d'activitÃ©s pour les visiteurs de tous Ã¢ges. </font></p>
 </h1><br>
 <h2 align="left"><font color="#0000FF">Balades en barque :</font></h2>
 <p align="justify"><font size="5">Profitez d'une promenade paisible sur le lac en louant une barque.
 <br>      
 </font> </p>
-<h2 align="left"><font color="#0000FF">Randonnées pédestres et cyclistes :</font></h2>
-<p align="justify"><font size="5">Des sentiers balisés entourent le lac, offrant des parcours idéals pour la marche ou le vélo. Ces chemins permettent de découvrir la richesse de la flore sauvage parisienne. 
+<h2 align="left"><font color="#0000FF">RandonnÃ©es pÃ©destres et cyclistes :</font></h2>
+<p align="justify"><font size="5">Des sentiers balisÃ©s entourent le lac, offrant des parcours idÃ©als pour la marche ou le vÃ©lo. Ces chemins permettent de dÃ©couvrir la richesse de la flore sauvage parisienne. 
 <br>      
 </font> </p>
 <h2 align="left"><font color="#0000FF">Aires de pique-nique :</font></h2>
-<p align="justify"><font size="5">Des espaces aménagés sont disponibles pour des moments conviviaux en famille ou entre amis. Apportez votre panier-repas et profitez d'un déjeuner en plein air au cour de la nature.
+<p align="justify"><font size="5">Des espaces amÃ©nagÃ©s sont disponibles pour des moments conviviaux en famille ou entre amis. Apportez votre panier-repas et profitez d'un dÃ©jeuner en plein air au cour de la nature.
  <br>      
   </font> </p>
-<h2 align="left"><font color="#0000FF">Activités pour enfants : </font></h2>
+<h2 align="left"><font color="#0000FF">ActivitÃ©s pour enfants : </font></h2>
 <p align="justify"><font size="5">
-Le lac Daumesnil,offre aux enfants une variété d'activités ludiques et éducatives. Ils peuvent profiter de balades en barque sur le lac, disponibles à la belle saison, ou explorer les nombreuses aires de jeux équipées de toboggans, balançoires et autres installations adaptées à différents âges.
+Le lac Daumesnil,offre aux enfants une variÃ©tÃ© d'activitÃ©s ludiques et Ã©ducatives. Ils peuvent profiter de balades en barque sur le lac, disponibles Ã  la belle saison, ou explorer les nombreuses aires de jeux Ã©quipÃ©es de toboggans, balanÃ§oires et autres installations adaptÃ©es Ã  diffÃ©rents Ã¢ges.
 <br>      
 </font> </p>
 <div style="text-align: center; margin: 20px 0;">
@@ -98,14 +98,14 @@ Le lac Daumesnil,offre aux enfants une variété d'activités ludiques et éducative
 <div id="sidecontent">
   <p>&nbsp;</p>
   <p align="center">&nbsp;</p>
-  <h2 align="left"><font color="#0000FF">Accès </font></h2>
+  <h2 align="left"><font color="#0000FF">AccÃ¨s </font></h2>
   <div align="justify"><br>
-      <font size="3"><strong>Le lac Daumesnil est accessible via les stations de métro Porte Dorée et Porte de Charenton (ligne 8), ainsi que par le tramway T3a. Des parkings sont également disponibles pour les visiteurs en voiture.
+      <font size="3"><strong>Le lac Daumesnil est accessible via les stations de mÃ©tro Porte DorÃ©e et Porte de Charenton (ligne 8), ainsi que par le tramway T3a. Des parkings sont Ã©galement disponibles pour les visiteurs en voiture.
 </strong></font><strong> </strong> </div>
   
 <h2 align="left"><font color="#0000FF">Horaires</font></h2>
  <div align="justify"><br>
-      <font size="3"><strong>Le bois de Vincennes est ouvert au public 24 heures sur 24, mais certaines activités, comme la location de barques, ont des horaires spécifiques. Il est recommandé de se renseigner à l'avance.</strong></font><strong> </strong> </div>
+      <font size="3"><strong>Le bois de Vincennes est ouvert au public 24 heures sur 24, mais certaines activitÃ©s, comme la location de barques, ont des horaires spÃ©cifiques. Il est recommandÃ© de se renseigner Ã  l'avance.</strong></font><strong> </strong> </div>
   	
   <p>&nbsp;</p>
   <p>&nbsp;</p>
@@ -120,7 +120,7 @@ Le lac Daumesnil,offre aux enfants une variété d'activités ludiques et éducative
 <div id="footerbox">
 <div id="footer">
 <p></a><font size="3"> <font face="Adobe Garamond Pro"><strong>&copy; 2025
-   - Réalisation par Yousra </strong></font></font></p>
+   - RÃ©alisation par Yousra </strong></font></font></p>
 </div>
 </div>
 </body>
