--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@ function MM_swapImage() { //v3.0
   
   <div style="text-align: right;">
     <p style="margin: 0;"><font color="#000000" size="6"><strong>Yousra Sidane</strong></font></p><br>
-    <p style="margin: 0;"><font color="#0000FF" size="6"><strong><a href="mailto:info@atelhis.fr">(adresse mail)</a></strong></font></p><br>
+    <p style="margin: 0;"><font color="#0000FF" size="6"><strong><a href="mailto:info@atelhis.fr">yousra.sidane07@gmail.com</a></strong></font></p><br>
     <p style="margin: 0;"><font color="#000000" size="6"><strong>06 61 38 50 64</strong></font></p><br>
   </div>
 
